--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-name: Colin Gillette, Developer & Designer
+name: Colin Gillette, Developer, Designer, & Consultant
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
